# obs-studio

./: CMakeLists.txt
test/node-bindings/: CMakeLists.txt  README.md  binding.gyp  index.js  package.json
test/node-bindings/src/: obs_screen_capture.cpp  permission_manager.h  permission_manager.mm
test/node-bindings/test/: test-linux.js  test-macos.js
